--- a/new-dir/rancher_values.yaml
+++ b/new-dir/rancher_values.yaml
@@ -1,104 +1,157 @@
-addLocal: "true"
-additionalTrustedCAs: false
-agentTLSMode: ""
-antiAffinity: preferred
-auditLog:
-  destination: sidecar
-  enabled: true
-  hostPath: /var/log/rancher/audit/
-  image:
-    pullPolicy: IfNotPresent
-    repository: rancher/mirrored-bci-micro
-    tag: 15.6.24.2
-  level: 1
-  maxAge: 1
-  maxBackup: 1
-  maxSize: 100
-  resources: {}
-bootstrapPassword: admin
-certmanager:
-  version: ""
-customLogos:
-  accessMode: ReadWriteOnce
-  enabled: false
-  size: 1Gi
-  volumeKind: persistentVolumeClaim
-  volumeSubpaths:
-    emberUi: ember
-    vueUi: vue
-debug: false
-extraEnv:
-- name: CATTLE_DEBUG
-  value: "true"
-- name: CATTLE_AGENT_IMAGE
-  value: registry.rancher.com/rancher/rancher-agent:v2.10.5
-- name: CATTLE_CLUSTER_REGISTRY
-  value: registry.rancher.com
-extraNodeSelectorTerms: {}
-extraObjects: []
-extraTolerations: {}
-fleet: ""
-hostname: ip-172-31-7-63.sa-east-1.compute.internal
-image:
-  pullPolicy: IfNotPresent
-  repository: rancher/rancher
-  tag: "v2.10.5"
-imagePullSecrets: []
-ingress:
-  enabled: true
-  extraAnnotations: {}
-  includeDefaultExtraAnnotations: true
-  ingressClassName: ""
-  path: /
-  pathType: ImplementationSpecific
-  servicePort: 80
-  tls:
-    secretName: tls-rancher-ingress
-    source: rancher
-letsEncrypt:
-  environment: production
-  ingress:
-    class: ""
-livenessProbe:
-  failureThreshold: 5
-  periodSeconds: 30
-  timeoutSeconds: 5
-noProxy: 127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,.svc,.cluster.local
-postDelete:
-  enabled: true
-  ignoreTimeoutError: false
-  image:
-    repository: rancher/shell
-    tag: v0.5.0
-  namespaceList:
-  - cattle-fleet-system
-  - cattle-system
-  - rancher-operator-system
-  timeout: 120
-preUpgrade:
-  image:
-    repository: rancher/shell
-    tag: v0.5.0
-priorityClassName: rancher-critical
-privateCA: false
-rancherImage: registry.rancher.com/rancher/rancher
-rancherImageTag: v2.10.5
-readinessProbe:
-  failureThreshold: 5
-  periodSeconds: 30
-  timeoutSeconds: 5
-replicas: 3
-resources: {}
-service:
-  annotations: {}
-  disableHTTP: false
-  type: ""
-startupProbe:
-  failureThreshold: 12
-  periodSeconds: 10
-  timeoutSeconds: 5
-systemDefaultRegistry: ""
-tls: ingress
-topologyKey: kubernetes.io/hostname
-useBundledSystemChart: false
-webhook: ""
+apiVersion: provisioning.cattle.io/v1
+kind: Cluster
+metadata:
+  annotations:
+    field.cattle.io/creatorId: user-rhkdp
+  creationTimestamp: '2025-11-21T12:35:53Z'
+  finalizers:
+    - wrangler.cattle.io/provisioning-cluster-remove
+    - wrangler.cattle.io/rke-cluster-remove
+    - wrangler.cattle.io/cloud-config-secret-remover
+  generation: 10
+  managedFields:
+    - apiVersion: provisioning.cattle.io/v1
+      fieldsType: FieldsV1
+      fieldsV1:
+        f:metadata:
+          f:finalizers:
+            .: {}
+            v:"wrangler.cattle.io/provisioning-cluster-remove": {}
+            v:"wrangler.cattle.io/rke-cluster-remove": {}
+        f:spec:
+          .: {}
+          f:agentEnvVars: {}
+          f:kubernetesVersion: {}
+          f:localClusterAuthEndpoint: {}
+          f:rkeConfig:
+            .: {}
+            f:chartValues:
+              .: {}
+              f:rke2-calico: {}
+            f:dataDirectories: {}
+            f:etcd:
+              .: {}
+              f:snapshotRetention: {}
+              f:snapshotScheduleCron: {}
+            f:machineGlobalConfig:
+              .: {}
+              f:cni: {}
+              f:disable-kube-proxy: {}
+              f:etcd-expose-metrics: {}
+            f:machinePoolDefaults: {}
+            f:machineSelectorConfig: {}
+            f:registries: {}
+            f:upgradeStrategy:
+              .: {}
+              f:controlPlaneConcurrency: {}
+              f:controlPlaneDrainOptions:
+                .: {}
+                f:deleteEmptyDirData: {}
+                f:disableEviction: {}
+                f:enabled: {}
+                f:force: {}
+                f:gracePeriod: {}
+                f:ignoreDaemonSets: {}
+                f:ignoreErrors: {}
+                f:postDrainHooks: {}
+                f:preDrainHooks: {}
+                f:skipWaitForDeleteTimeoutSeconds: {}
+                f:timeout: {}
+              f:workerConcurrency: {}
+              f:workerDrainOptions:
+                .: {}
+                f:deleteEmptyDirData: {}
+                f:disableEviction: {}
+                f:enabled: {}
+                f:force: {}
+                f:gracePeriod: {}
+                f:ignoreDaemonSets: {}
+                f:ignoreErrors: {}
+                f:postDrainHooks: {}
+                f:preDrainHooks: {}
+                f:skipWaitForDeleteTimeoutSeconds: {}
+                f:timeout: {}
+      manager: rancher
+      operation: Update
+      time: '2025-11-21T13:46:01Z'
+    - apiVersion: provisioning.cattle.io/v1
+      fieldsType: FieldsV1
+      fieldsV1:
+        f:metadata:
+          f:finalizers:
+            v:"wrangler.cattle.io/cloud-config-secret-remover": {}
+      manager: rancher-v2.10.5-secret-migrator
+      operation: Update
+      time: '2025-11-21T13:46:01Z'
+    - apiVersion: provisioning.cattle.io/v1
+      fieldsType: FieldsV1
+      fieldsV1:
+        f:status:
+          .: {}
+          f:clientSecretName: {}
+          f:clusterName: {}
+          f:conditions: {}
+          f:fleetWorkspaceName: {}
+          f:observedGeneration: {}
+          f:ready: {}
+      manager: rancher
+      operation: Update
+      subresource: status
+      time: '2025-11-21T13:56:59Z'
+  name: new-cluster-001
+  namespace: fleet-default
+  resourceVersion: '47878'
+  uid: 8123bcb1-78b6-45bb-a79a-d2717ba84e5d
+spec:
+  agentEnvVars:
+    - name: CATTLE_DEBUG
+      value: "true"
+    - name: CATTLE_AGENT_IMAGE
+      value: registry.rancher.com/rancher/rancher-agent:v2.10.5
+    - name: CATTLE_CLUSTER_REGISTRY
+      value: registry.rancher.com
+  kubernetesVersion: v1.31.13+rke2r1
+  localClusterAuthEndpoint: {}
+  rkeConfig:
+    chartValues:
+      rke2-calico: {}
+    dataDirectories: {}
+    etcd:
+      snapshotRetention: 5
+      snapshotScheduleCron: 0 */5 * * *
+    machineGlobalConfig:
+      cni: calico
+      disable-kube-proxy: false
+      etcd-expose-metrics: false
+    machinePoolDefaults: {}
+    machineSelectorConfig:
+      - config:
+          protect-kernel-defaults: false
+    registries: {}
+    upgradeStrategy:
+      controlPlaneConcurrency: '1'
+      controlPlaneDrainOptions:
+        deleteEmptyDirData: true
+        disableEviction: false
+        enabled: false
+        force: false
+        gracePeriod: -1
+        ignoreDaemonSets: true
+        ignoreErrors: false
+        postDrainHooks: null
+        preDrainHooks: null
+        skipWaitForDeleteTimeoutSeconds: 0
+        timeout: 120
+      workerConcurrency: '1'
+      workerDrainOptions:
+        deleteEmptyDirData: true
+        disableEviction: false
+        enabled: false
+        force: false
+        gracePeriod: -1
+        ignoreDaemonSets: true
+        ignoreErrors: false
+        postDrainHooks: null
+        preDrainHooks: null
+        skipWaitForDeleteTimeoutSeconds: 0
+        timeout: 120
