--- a/new-dir/rancher_values.yaml
+++ b/new-dir/rancher_values.yaml
@@ -1,155 +1,25 @@
-apiVersion: provisioning.cattle.io/v1
-kind: Cluster
+apiVersion: rke-machine-config.cattle.io/v1
+kind: Amazonec2Config
 metadata:
+  # The annotation must point to the new Cluster's UID
   annotations:
     field.cattle.io/creatorId: user-rhkdp
-  creationTimestamp: '2025-11-21T12:35:53Z'
-  finalizers:
-    - wrangler.cattle.io/provisioning-cluster-remove
-    - wrangler.cattle.io/rke-cluster-remove
-    - wrangler.cattle.io/cloud-config-secret-remover
-  generation: 10
-  managedFields:
-    - apiVersion: provisioning.cattle.io/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:metadata:
-          f:finalizers:
-            .: {}
-            v:"wrangler.cattle.io/provisioning-cluster-remove": {}
-            v:"wrangler.cattle.io/rke-cluster-remove": {}
-        f:spec:
-          .: {}
-          f:agentEnvVars: {}
-          f:kubernetesVersion: {}
-          f:localClusterAuthEndpoint: {}
-          f:rkeConfig:
-            .: {}
-            f:chartValues:
-              .: {}
-              f:rke2-calico: {}
-            f:dataDirectories: {}
-            f:etcd:
-              .: {}
-              f:snapshotRetention: {}
-              f:snapshotScheduleCron: {}
-            f:machineGlobalConfig:
-              .: {}
-              f:cni: {}
-              f:disable-kube-proxy: {}
-              f:etcd-expose-metrics: {}
-            f:machinePoolDefaults: {}
-            f:machineSelectorConfig: {}
-            f:registries: {}
-            f:upgradeStrategy:
-              .: {}
-              f:controlPlaneConcurrency: {}
-              f:controlPlaneDrainOptions:
-                .: {}
-                f:deleteEmptyDirData: {}
-                f:disableEviction: {}
-                f:enabled: {}
-                f:force: {}
-                f:gracePeriod: {}
-                f:ignoreDaemonSets: {}
-                f:ignoreErrors: {}
-                f:postDrainHooks: {}
-                f:preDrainHooks: {}
-                f:skipWaitForDeleteTimeoutSeconds: {}
-                f:timeout: {}
-              f:workerConcurrency: {}
-              f:workerDrainOptions:
-                .: {}
-                f:deleteEmptyDirData: {}
-                f:disableEviction: {}
-                f:enabled: {}
-                f:force: {}
-                f:gracePeriod: {}
-                f:ignoreDaemonSets: {}
-                f:ignoreErrors: {}
-                f:postDrainHooks: {}
-                f:preDrainHooks: {}
-                f:skipWaitForDeleteTimeoutSeconds: {}
-                f:timeout: {}
-      manager: rancher
-      operation: Update
-      time: '2025-11-21T13:46:01Z'
-    - apiVersion: provisioning.cattle.io/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:metadata:
-          f:finalizers:
-            v:"wrangler.cattle.io/cloud-config-secret-remover": {}
-      manager: rancher-v2.10.5-secret-migrator
-      operation: Update
-      time: '2025-11-21T13:46:01Z'
-    - apiVersion: provisioning.cattle.io/v1
-      fieldsType: FieldsV1
-      fieldsV1:
-        f:status:
-          .: {}
-          f:clientSecretName: {}
-          f:clusterName: {}
-          f:conditions: {}
-          f:fleetWorkspaceName: {}
-          f:observedGeneration: {}
-          f:ready: {}
-      manager: rancher
-      operation: Update
-      subresource: status
-      time: '2025-11-21T13:56:59Z'
-  name: new-cluster-002
+    ownerBindingsCreated: "true"
+  generateName: nc-load-cluster-03-wkr-
+  # The name MUST match the machineConfigRef in the Cluster YAML
+  name: nc-load-cluster-03-wkr-lkets
   namespace: fleet-default
-spec:
-  agentEnvVars:
-    - name: CATTLE_DEBUG
-      value: "true"
-    - name: CATTLE_AGENT_IMAGE
-      value: registry.rancher.com/rancher/rancher-agent:v2.10.5
-    - name: CATTLE_CLUSTER_REGISTRY
-      value: registry.rancher.com
-  kubernetesVersion: v1.31.13+rke2r1
-  localClusterAuthEndpoint: {}
-  rkeConfig:
-    chartValues:
-      rke2-calico: {}
-    dataDirectories: {}
-    etcd:
-      snapshotRetention: 5
-      snapshotScheduleCron: 0 */5 * * *
-    machineGlobalConfig:
-      cni: calico
-      disable-kube-proxy: false
-      etcd-expose-metrics: false
-    machinePoolDefaults: {}
-    machineSelectorConfig:
-      - config:
-          protect-kernel-defaults: false
-    registries: {}
-    upgradeStrategy:
-      controlPlaneConcurrency: '1'
-      controlPlaneDrainOptions:
-        deleteEmptyDirData: true
-        disableEviction: false
-        enabled: false
-        force: false
-        gracePeriod: -1
-        ignoreDaemonSets: true
-        ignoreErrors: false
-        postDrainHooks: null
-        preDrainHooks: null
-        skipWaitForDeleteTimeoutSeconds: 0
-        timeout: 120
-      workerConcurrency: '1'
-      workerDrainOptions:
-        deleteEmptyDirData: true
-        disableEviction: false
-        enabled: false
-        force: false
-        gracePeriod: -1
-        ignoreDaemonSets: true
-        ignoreErrors: false
-        postDrainHooks: null
-        preDrainHooks: null
-        skipWaitForDeleteTimeoutSeconds: 0
-        timeout: 120
+accessKey: ""
+ami: ""
+instanceType: t2.xlarge # Using t2.xlarge as per your template
+keypairName: ""
+region: sa-east-1
+rootSize: "16"
+secretKey: ""
+securityGroup:
+  - rancher-nodes
+sshUser: ubuntu
+subnetId: null
+vpcId: vpc-051a6e1329e354193 # Use your specific VPC ID
+volumeType: gp2
+zone: a
