--- a/new-dir/rancher_values.yaml
+++ b/new-dir/rancher_values.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: cattle-system
 spec:
   minAvailable: 3
+  minUnavailable: 2
   selector:
     matchLabels:
       app: cattle-cluster-agent
