Update pod disruption budget settings

--- a/new-dir/rancher_values.yaml
+++ b/new-dir/rancher_values.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cattle-system
 spec:
   minAvailable: 3
-  minUnavailable: 2
+  maxUnavailable: 1
   selector:
     matchLabels:
       app: cattle-cluster-agent
