--- a/new-dir-2/cattle-cluster-agent_deployment.yaml
+++ b/new-dir-2/cattle-cluster-agent_deployment.yaml
@@ -15,6 +15,7 @@ metadata:
   creationTimestamp: '2025-12-12T14:46:07Z'
   generation: 8
   labels:
+    app.kubernetes.io/managed-by: Helm
     objectset.rio.cattle.io/hash: c5c3ae05aa6cf7e41d2b022e9aac4fccf373d8f4
   managedFields:
     - apiVersion: apps/v1
